docs: se corrigen errores de fiabilidad y mantenibilidad

--- a/taller_calidad_software_DavidCruz/taller_calidad_software_david/sonar-project.properties
+++ b/taller_calidad_software_DavidCruz/taller_calidad_software_david/sonar-project.properties
@@ -7,3 +7,4 @@ sonar.sources=app,resources,routes,public
 sonar.language=php   # o javascript, java, etc.
 sonar.sourceEncoding=UTF-8
 sonar.exclusions=**/vendor/**, **/node_modules/**, **/*.test.php
+sonar.coverage.exclusions=**
